# 0trace-backend

./: AGENTS.md  CONTRIBUTING.md  LICENCE.md  PLAN.md  README.md  docker-compose.yml
apps/api/: .env.example  AGENTS.md  Dockerfile  manage.py  pyproject.toml  pytest.ini
apps/api/apps/accounts/: admin.py  backends.py  bootstrap_views.py  models.py  serializers.py  urls.py  views.py
apps/api/apps/browser/: admin.py  apps.py  models.py  selectors.py  serializers.py  urls.py  views.py
apps/api/apps/common/: predefined_websites.py
apps/api/apps/communications/: admin.py  apps.py  models.py  selectors.py  serializers.py  urls.py  views.py
apps/api/apps/economy/: admin.py  apps.py  models.py  selectors.py  serializers.py  urls.py  views.py
apps/api/apps/filesystem/: admin.py  apps.py  models.py  selectors.py  serializers.py  urls.py  views.py
apps/api/apps/hardware/: admin.py  apps.py  models.py  selectors.py  serializers.py  urls.py  views.py
apps/api/apps/jobs/: admin.py  models.py  selectors.py  serializers.py  tasks.py  urls.py  views.py  worker.py
apps/api/apps/machines/: admin.py  apps.py  models.py  selectors.py  serializers.py  urls.py  views.py
apps/api/apps/marketplace/: admin.py  apps.py  models.py  selectors.py  serializers.py  urls.py  views.py
apps/api/apps/networking/: admin.py  apps.py  models.py  selectors.py  serializers.py  urls.py  views.py
apps/api/apps/progression/: admin.py  (+6 more)
apps/api/config/: celery.py  urls.py
apps/api/docker/: entrypoint.sh  gunicorn.conf.py
apps/api/openapi/: openapi.yaml
apps/api/tests/: conftest.py
(+115 files in other folders)
