[project]
name = "0trace-api"
version = "0.1.0"
description = "Authoritative Django/DRF backend for the 0trace simulation game."
requires-python = ">=3.14"
dependencies = [
  "Django>=6.0,<6.1",
  "djangorestframework>=3.17,<3.18",
  "drf-spectacular>=0.29,<0.30",
  "PyYAML>=6.0",
  "pymysql>=1.1",
  "bcrypt>=4.2",
  "celery>=5.6",
  "redis>=7.0",
  "django-cors-headers>=4.9",
  "gunicorn>=23,<24",
  "python-dotenv>=1.0",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0",
  "pytest-django>=4.12",
  "factory-boy>=3.3",
  "freezegun>=1.5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = ["test_*.py", "*_tests.py"]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
